{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 340,
  "lineage": "7c45be6b-9467-8d6e-51a1-83313b67a322",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "amq_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d6294dcaac5546e4",
            "arn": "arn:aws:ec2:ap-southeast-2:552359848494:instance/i-08d51d29d8f58b58a",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2_profile",
            "id": "i-08d51d29d8f58b58a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "amq_key_pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08e88d06d3a89270e",
            "private_dns": "ip-10-0-1-19.ap-southeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.19",
            "public_dns": "ec2-3-106-114-240.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "3.106.114.240",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d7bf79f57e8f6bde",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07bb6ac87eb883324",
            "tags": {
              "Name": "amq-node-1"
            },
            "tags_all": {
              "Name": "amq-node-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bc34bf29bbd77c78"
            ]
          },
          "dependencies": [
            "aws_efs_access_point.amq_efs_ap",
            "aws_efs_file_system.amq_efs",
            "aws_efs_mount_target.amq_efs_mount",
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_efs_role",
            "aws_s3_bucket.temp_storage",
            "aws_s3_object.amq_broker_zip",
            "aws_security_group.allow_amq",
            "aws_subnet.main",
            "aws_vpc.main",
            "random_string.bucket_suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d6294dcaac5546e4",
            "arn": "arn:aws:ec2:ap-southeast-2:552359848494:instance/i-0d0339795aa14fa4a",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2_profile",
            "id": "i-0d0339795aa14fa4a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "amq_key_pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c460ff08ae8fc71e",
            "private_dns": "ip-10-0-1-25.ap-southeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.25",
            "public_dns": "ec2-13-211-81-148.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "13.211.81.148",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08963df6a44b23fcb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07bb6ac87eb883324",
            "tags": {
              "Name": "amq-node-2"
            },
            "tags_all": {
              "Name": "amq-node-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bc34bf29bbd77c78"
            ]
          },
          "dependencies": [
            "aws_efs_access_point.amq_efs_ap",
            "aws_efs_file_system.amq_efs",
            "aws_efs_mount_target.amq_efs_mount",
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_efs_role",
            "aws_s3_bucket.temp_storage",
            "aws_s3_object.amq_broker_zip",
            "aws_security_group.allow_amq",
            "aws_subnet.main",
            "aws_vpc.main",
            "random_string.bucket_suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:552359848494:internet-gateway/igw-0a6457eb26644c8af",
            "id": "igw-0a6457eb26644c8af",
            "owner_id": "552359848494",
            "tags": {
              "Name": "amq-efs-poc-igw"
            },
            "tags_all": {
              "Name": "amq-efs-poc-igw"
            },
            "vpc_id": "vpc-072b9b7fb408aeb20"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:552359848494:route-table/rtb-09641889af1ab0933",
            "id": "rtb-09641889af1ab0933",
            "owner_id": "552359848494",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a6457eb26644c8af",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "amq-efs-poc-rt"
            },
            "tags_all": {
              "Name": "amq-efs-poc-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-072b9b7fb408aeb20"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-017773e1b2964bc8e",
            "route_table_id": "rtb-09641889af1ab0933",
            "subnet_id": "subnet-07bb6ac87eb883324"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main",
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_amq",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:552359848494:security-group/sg-0bc34bf29bbd77c78",
            "description": "Allow AMQ inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bc34bf29bbd77c78",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "AMQ from VPC",
                "from_port": 61616,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 61616
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "NFS from VPC",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "allow_amq",
            "name_prefix": "",
            "owner_id": "552359848494",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_amq"
            },
            "tags_all": {
              "Name": "allow_amq"
            },
            "timeouts": null,
            "vpc_id": "vpc-072b9b7fb408aeb20"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:552359848494:subnet/subnet-07bb6ac87eb883324",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07bb6ac87eb883324",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "552359848494",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "amq-efs-poc-subnet"
            },
            "tags_all": {
              "Name": "amq-efs-poc-subnet"
            },
            "vpc_id": "vpc-072b9b7fb408aeb20"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:552359848494:vpc/vpc-072b9b7fb408aeb20",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0425619e4cc49cc92",
            "default_route_table_id": "rtb-09e379d6ddac5d18d",
            "default_security_group_id": "sg-04d848aad5d7f122a",
            "dhcp_options_id": "dopt-dd9570b8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-072b9b7fb408aeb20",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09e379d6ddac5d18d",
            "owner_id": "552359848494",
            "tags": {
              "Name": "amq-efs-poc-vpc"
            },
            "tags_all": {
              "Name": "amq-efs-poc-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}